--- a/package.yaml
+++ b/package.yaml
@@ -17,9 +17,6 @@ description:         Please see the README on GitHub at <https://github.com/gith
 dependencies:
 - base >= 4.7 && < 5
 
-library:
-  source-dirs: src
-
 executables:
   i3-analytics-exe:
     main:                Main.hs
@@ -28,18 +25,7 @@ executables:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
+    - -XNoImplicitPrelude
     dependencies:
-    - i3-analytics
     - basic-prelude
-
-tests:
-  i3-analytics-test:
-    main:                Spec.hs
-    source-dirs:         test
-    ghc-options:
-    - -threaded
-    - -rtsopts
-    - -with-rtsopts=-N
-    dependencies:
-    - i3-analytics
-    - basic-prelude
+    - i3ipc
