--- a/stack.yaml
+++ b/stack.yaml
@@ -39,7 +39,9 @@ packages:
 # - git: https://github.com/commercialhaskell/stack.git
 #   commit: e7b331f14bcffb8367cd58fbfc8b40ec7642100a
 #
-# extra-deps: []
+extra-deps:
+- git: git@github.com:rdnetto/i3ipc.git
+  commit: 1a396255e4aaa64fb8ea6d889f3f4d652015ee79
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
