--- a/package.yaml
+++ b/package.yaml
@@ -18,8 +18,9 @@ dependencies:
 - base >= 4.7 && < 5
 - basic-prelude
 
-ghc-options:
-  - -XScopedTypeVariables
+default-extensions:
+- NoImplicitPrelude
+- ScopedTypeVariables
 
 executables:
   i3-analytics-exe:
@@ -29,7 +30,6 @@ executables:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
-    - -XNoImplicitPrelude
     dependencies:
     - aeson
     - bytestring
