--- a/stack.yaml
+++ b/stack.yaml
@@ -17,7 +17,7 @@
 #
 # resolver: ./custom-snapshot.yaml
 # resolver: https://example.com/snapshots/2018-01-01.yaml
-resolver: lts-15.10
+resolver: lts-15.11
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -40,8 +40,7 @@ packages:
 #   commit: e7b331f14bcffb8367cd58fbfc8b40ec7642100a
 #
 extra-deps:
-- git: git@github.com:rdnetto/i3ipc.git
-  commit: 1a396255e4aaa64fb8ea6d889f3f4d652015ee79
+- i3ipc-0.2.0.0
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
