--- a/package.yaml
+++ b/package.yaml
@@ -33,6 +33,7 @@ executables:
     - -with-rtsopts=-N
     dependencies:
     - aeson
+    - attoparsec
     - bytestring
     - chronos
     - containers
@@ -41,6 +42,7 @@ executables:
     - microlens
     - microlens-ghc
     - microlens-th
+    - parser-combinators
     - optparse-applicative
     - safe
     - template-haskell
