systemd service: Fixed failure handling

--- a/i3-analytics.service
+++ b/i3-analytics.service
@@ -5,6 +5,7 @@ After=display-manager.service
 [Service]
 Type=simple
 ExecStart=sh -c '~/.local/bin/i3-analytics subscribe'
+Restart=always
 
 [Install]
 WantedBy=default.target
